# hikari-wave

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
docs/: index.md
docs/pages/api/: config.md  constants.md  encrypt.md  error.md  gateway.md  server.md
docs/pages/api/audio/: ffmpeg.md  opus.md  source.md  store.md
docs/pages/api/event/: events.md  factory.md  types.md
docs/pages/api/internal/: constants.md  encrypt.md  error.md  result.md
docs/pages/api/networking/: gateway.md  server.md
docs/pages/changelog/: 0.0.1.md  0.0.1a1.md  0.0.1a2.md  0.0.1a3.md  0.0.1a4.md  0.0.1a5.md  0.0.1a6.md  0.1.0.md  0.1.0a1.md  0.1.0a2.md  0.2.0a1.md  index.md
hikariwave/: __init__.py  client.py  config.py  connection.py  constants.py  encrypt.py  error.py  gateway.py  server.py
hikariwave/audio/: ffmpeg.py  opus.py  player.py  source.py  store.py
hikariwave/audio/source/: file.py  web.py
hikariwave/event/: events.py  factory.py  types.py
hikariwave/internal/: constants.py  encrypt.py  error.py  result.py
hikariwave/networking/: gateway.py  server.py
tests/: test_validator.py
